--- a/style.css
+++ b/style.css
@@ -11,10 +11,16 @@
 	height : 100px;
 	background-color : #6699ff;
 	border-style : double;
-	border-color:Black;	
+	border-color:Black;
 }
 img{
 	width:400px;
 	height:300px;
 	padding:30px;
+}
+#A1{
+	margin-top:100px;
+}
+#A2{
+	text-size:40px;
 }
